# dolphinbat

./: .gitignore  .pre-commit-config.yaml  .prettierignore  README.md  bunfig.toml  docker-compose.docs.yml  docker-compose.local.yml  docker-compose.production.yml  eslint.config.js  manage.py  package.json  pyproject.toml  tsconfig.app.json  vite.config.ts
.devcontainer/: devcontainer.json
.envs/.local/: .postgres
.github/: dependabot.yml
.github/workflows/: ci.yml
compose/local/django/: Dockerfile
compose/local/docs/: Dockerfile
compose/production/django/: Dockerfile
compose/production/traefik/: traefik.yml
config/: urls.py  wsgi.py
config/settings/: base.py  local.py  production.py  test.py
docs/: conf.py  howto.rst  index.rst  make.bat  users.rst
dolphinbat/: conftest.py
dolphinbat/contrib/sites/migrations/: 0003_set_site_domain_and_name.py
dolphinbat/templates/: base.html
dolphinbat/users/: adapters.py  apps.py  models.py  views.py
dolphinbat/users/migrations/: 0001_initial.py
dolphinbat/users/tests/: factories.py  test_admin.py  test_forms.py  test_models.py  test_urls.py  test_views.py
locale/en_US/LC_MESSAGES/: django.po
locale/fr_FR/LC_MESSAGES/: django.po
locale/pt_BR/LC_MESSAGES/: django.po
requirements/: base.txt  local.txt  production.txt
